Tested on mobile device and fixed some styles

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -101,6 +101,9 @@
 .logo-letters {
   fill: #eef1f6; }
 
+.no-scroll {
+  overflow-y: hidden; }
+
 @media only screen and (max-width: 500px) {
   .xsm-hide {
     display: none !important; } }
@@ -412,7 +415,8 @@ body {
     display: flex;
     flex-flow: column nowrap;
     justify-content: space-between;
-    height: 100vh; }
+    overflow-y: hidden;
+    height: calc(100vh - 7rem); }
     .main-navigation-mobile__drop-menu[data-visible="false"] {
       display: none; }
     .main-navigation-mobile__drop-menu--links {
@@ -460,7 +464,7 @@ body {
       flex-flow: column nowrap;
       background-color: #a4ee15;
       gap: 0.5rem;
-      padding: 1rem 1.25rem 4.5rem 1.25rem; }
+      padding: 1rem; }
       .main-navigation-mobile__drop-menu--contact li a {
         display: flex;
         align-items: center;
@@ -611,7 +615,7 @@ body {
     position: relative;
     margin: 0 auto;
     padding: 0 1rem;
-    height: 100vh; }
+    height: calc(100vh - 3.5rem); }
     @media only screen and (min-width: 1200px) {
       .main-hero__content {
         max-width: 1280px;
