--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -36,7 +36,7 @@
     margin: 0 auto;
     padding: 0 1rem;
 
-    height: 100vh;
+    height: calc(100vh - 3.5rem);
 
     @media only screen and (min-width: 1200px) {
       max-width: $main-max-width;
